# OST-modules

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  NAVIGATOR_IMPROVEMENTS.md  README.md  README_TEMPLATE.md  RESUME_SESSION.md  SEQUENCER_IMPROVEMENTS.md  SESSION_2025-10-12.md  buildme.sh  generate-version.sh  test-ws.js
.github/workflows/: cmake.yml  cmake_daily.yml  cmake_stable.yml
cmake_modules/: FindCImg.cmake  FindOSTSERVER.cmake
debian/: README.Debian  README.source  changelog  control  copyright  debhelper-build-stamp  files  ostmodules.substvars  rules
include/: basemodule.h
src/: versionModule.cc.in  versionModule.hh
src/modules/allsky/: allsky.cpp  allsky.fr.md  allsky.h  allsky.json  allsky.qrc
src/modules/basemodule/: basemodule.cpp  basemodule.json  basemodule.qrc  indimodule.json
src/modules/blindpec/: CV_SubPix.cpp  CV_SubPix.h  blindpec.cpp  blindpec.h  blindpec.json  blindpec.qrc  tacquisitionvideo.cpp  tacquisitionvideo.h
src/modules/darkassist/: darkassist.cpp  darkassist.fr.md  darkassist.h  darkassist.json  darkassist.qrc
src/modules/dummy/: dummy.cpp  dummy.h  dummy.json  dummy.qrc
src/modules/focus/: focus.cpp  focus.fr.md  focus.h  focus.json  focus.qrc  focus.scxml  polynomialfit.h
src/modules/guider/: guider.cpp  guider.fr.md  guider.h  guider.json  guider.qrc  polynomialfit.cpp  polynomialfit.h
src/modules/indimodule/: indimodule.cpp  indimodule.h  indimodule.qrc
src/modules/indipanel/: indipanel.cpp  indipanel.h
src/modules/inspector/: inspector.cpp  inspector.fr.md  inspector.h  inspector.json  inspector.qrc
src/modules/maincontrol/: maincontrol.cpp  maincontrol.fr.md  maincontrol.h  maincontrol.qrc
src/modules/meteo/: meteo.cpp  meteo.fr.md  meteo.h  meteo.json  meteo.qrc
src/modules/navigator/: navigator.cpp  navigator.fr.md  navigator.h  navigator.json  navigator.qrc
src/modules/planner/: planner.cpp  planner.h  planner.json  planner.md  planner.qrc
src/modules/polar/: polar.cpp  polar.fr.md  polar.h  polar.json  polar.qrc
src/modules/sequencer/: sequencer.cpp  sequencer.en.md  sequencer.fr.md  sequencer.h  sequencer.json  sequencer.qrc
src/modules/template/: template.cpp  template.h  template.json  template.qrc
src/ssolverutils/: README.md  fileio.cpp  fileio.h  solver.cpp  solver.h  stretch.cpp
